Continuing work on P7